# hornybox_v2

./: CMakeLists.txt  README.md  deamon.cpp  deamon.hpp  global.cpp  global.hpp  hornio.cpp  hornio.hpp  hornybox  main.cpp  vision.cpp  vision.hpp  webservice.cpp  webservice.hpp
cascades/: haarcascade_frontalface.xml  haarcascade_humanbody.xml
web/: horn.json  index.html
